# Petvaxtrax

./: .gitlab-ci.yml  .pre-commit-config.yaml  API.md  CHANGELOG.md  FAQ.md  INSTALL.md  Makefile  README.md  RELEASE_CANDIDATE.md  agent_lock.json  agent_state.json  pets_export.json  planner.md  pyproject.toml
app/: models.py  routes.py
instance/: pets.db
logs/: .gitkeep
state/: .gitkeep
state_history/: STATE_2026-02-26-12-50-00.json  STATE_2026-02-26-13-10-00.json  STATE_2026-02-26-13-20-00.json  STATE_2026-02-26-13-40-00.json  STATE_2026-02-26-13-50-00.json  STATE_2026-02-26-14-10-00.json  STATE_2026-02-26-14-20-00.json  STATE_2026-02-26-14-40-00.json  STATE_2026-02-26-14-50-31.json  STATE_2026-02-26-15-10-00.json  STATE_2026-02-26-15-20-00.json  STATE_2026-02-26-15-40-43.json  STATE_2026-02-26-15-50-00.json  STATE_2026-02-26-16-10-00.json  STATE_2026-02-26-16-20-00.json  STATE_2026-02-26-16-40-00.json  STATE_2026-02-26-17-11-04.json  STATE_2026-02-26-17-20-00.json  STATE_2026-02-26-17-40-00.json  STATE_2026-02-26-17-50-00.json  STATE_2026-02-26-18-10-00.json  STATE_2026-02-26-18-20-00.json  STATE_2026-02-26-18-40-00.json  STATE_2026-02-26-18-50-00.json  STATE_2026-02-26-19-10-00.json  STATE_2026-02-26-19-20-35.json  STATE_2026-02-26-19-40-54.json  STATE_2026-02-26-19-50-34.json  STATE_2026-02-26-20-10-00.json  STATE_2026-02-26-20-20-00.json  STATE_2026-02-26-20-40-00.json  STATE_2026-02-26-20-50-00.json  STATE_2026-02-26-21-10-00.json  STATE_2026-02-26-21-20-00.json  STATE_2026-02-26-21-40-00.json  STATE_2026-02-26-21-50-00.json  STATE_2026-02-26-22-10-34.json  (+6 more)
(+67 files in other folders)
