# PetVaxHK Test Configuration
# Run with: pytest petvax/app/tests/

[project]
name = "petvax-hk"
version = "0.1.0"
description = "Local-first pet vaccine tracker for Hong Kong"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
]
dev = [
    "black>=23.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring database",
    "slow: Tests that take longer to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
